# nanoPT

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: exp1.toml  exp1.yaml
nanopt/: __main__.py  common.py  data.py  main.py
nanopt/models/: llama.py
nanopt/optimizers/: adamw.py
nanopt/profiling/: track_mfu.py
scripts/: 01_create_data_volume.py  02_train.py
